# api/docs/swagger.json
@@ -281,14 +281,29 @@
                 }
             }
         },
+        "models.FieldEnum": {
+            "type": "string",
+            "enum": [
+                "name",
+                "locale",
+                "click",
+                "purchase"
+            ],
+            "x-enum-varnames": [
+                "Name",
+                "Locale",
+                "Click",
+                "Purchase"
+            ]
+        },
         "models.FilterCondition": {
             "type": "object",
             "properties": {
                 "field_name": {
-                    "type": "string"
+                    "$ref": "#/definitions/models.FieldEnum"
                 },
                 "operation": {
-                    "type": "string"
+                    "$ref": "#/definitions/models.OperationEnum"
                 },
                 "value": {
                     "type": "string"
@@ -325,6 +340,21 @@
                     "type": "integer"
                 }
             }
+        },
+        "models.OperationEnum": {
+            "type": "string",
+            "enum": [
+                "lt",
+                "gt",
+                "equals",
+                "query"
+            ],
+            "x-enum-varnames": [
+                "Lt",
+                "Gt",
+                "Equals",
+                "Query"
+            ]
         },
         "models.SortConfig": {
             "type": "object",
